--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scam Detector Forta Agent",
   "scripts": {
     "build": "tsc",
-    "start": "npm run start:dev",
+    "start": "",
     "start:dev": "nodemon --watch src --watch forta.config.json -e js,ts,json  --exec \"npm run build && forta-agent run\"",
     "start:prod": "forta-agent run --prod",
     "tx": "npm run build && forta-agent run --tx",
